Hitachi HD44780 LCD

--- a/LCD/Readme
+++ b/LCD/Readme
@@ -1,5 +1,6 @@
 Python code for connecting RPi to HD44780 LCD (16 x 2)
 We assume RPi.GPIO python library has already been installed in RPi
+See lcd.py for connections between RPi and LCD
 
 USAGE:
 
